unpackaged/main/default/objects/OrderApi__Assignment_Role__c/OrderApi__Assignment_Role__c.object-meta.xml
<CustomObject>
    <description>Configure custom roles for Contacts to be assigned to against &quot;Assignable&quot; Items.</description>
    <label>Assignment Role</label>
    <nameField>
        <label>Assignment Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>