unpackaged/main/default/objects/OrderApi__Assignment_Role__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Optional description for the Assignment Role.</description>
    <inlineHelpText>Optional description for the Assignment Role.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>