unpackaged/main/default/objects/OrderApi__Assignment_Role__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Roles is considered &quot;Active&quot;.</description>
    <inlineHelpText>When checked, the Contact is considered &quot;Active&quot;.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>