unpackaged/main/default/objects/OrderApi__Assignment_Role__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Roles is considered as&quot;Default Assignment Role&quot;.</description>
    <inlineHelpText>When checked, the Roles is considered as&quot;Default Assignment Role&quot;.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>