unpackaged/main/default/objects/OrderApi__Assignment_Role__c/fields/OrderApi__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will be considered a &quot;Primary Contact&quot; for the &quot;Assigned To Record&quot;. Defaults unchecked.</description>
    <inlineHelpText>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will be considered a &quot;Primary Contact&quot; for the &quot;Assigned To Record&quot;. Defaults unchecked.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>