unpackaged/main/default/objects/OrderApi__Assignment_Role__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipName>Assignment_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>