unpackaged/main/default/objects/OrderApi__Assignment_Role__c/fields/OrderApi__Receives_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receives_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will receive notifications related to the &quot;Assigned To Record&quot; by default. Defaults unchecked.</description>
    <inlineHelpText>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will receive notifications related to the &quot;Assigned To Record&quot; by default. Defaults unchecked.</inlineHelpText>
    <label>Receives Email Notifications</label>
    <type>Checkbox</type>
</CustomField>